--- a/index.html
+++ b/index.html
@@ -1,48 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Pollos Hermanos</title>
-    <link rel="stylesheet" href="losPollosHermanoMain.css">
-</head>
-<body>
-<header class="header">
-    <div class="logo">
-        <img id = "logo" src="Los Pollos images-gif/LosPollosHermanosLogo2.webp" alt="LosPollosHermanosLogo">
-    </div>
-    <div class="nav">
-        <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
-        <a id ="Who we are"href="http://" target="_blank" rel="noopener noreferrer">Who we are</a>
-        <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
-        <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
-    </div>
-    <div class="userNav">
-        <a id ="Set-a-location" href="http://" target="_blank" rel="noopener noreferrer">Set a Location</a>
-        <ion-icon  id="UserProf"name="person-circle-outline"></ion-icon>
-        <a class= "btnLink" href="http://" target="_blank" rel="noopener noreferrer">Order Now</a>
-    </div>
-</header>
-<section class="Deal">
-<div class="video">
-    <video autoplay loop muted plays-inline class="back-vid">
-        <source src="Los Pollos images-gif/Food video.mp4" type="video/mp4" />
-        <img src="" alt="">
-</div>
-</section>
-<section class="exploreMenu">
-    <div class="MenuCard-Container">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="losPollosHermanoMain.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <img
+          id="logo"
+          src="Los Pollos images-gif/LosPollosHermanosLogo2.webp"
+          alt="LosPollosHermanosLogo"
+        />
+      </div>
+      <div class="nav">
+        <a id="Menu" href="http://" target="_blank" rel="noopener noreferrer"
+          >Menu</a
+        >
+        <a
+          id="Who we are"
+          href="http://"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Who we are</a
+        >
+        <a id="Rewards" href="http://" target="_blank" rel="noopener noreferrer"
+          >Rewards</a
+        >
+        <input type="search" name="Searchbar" id="Searchbar" placeholder="Search">
+      </div>
+      <div class="userNav">
+        <a
+          id="Set-a-location"
+          href="http://"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Set a Location</a
+        >
+        <ion-icon id="UserProf" name="person-circle-outline"></ion-icon>
+        <a
+          id="Navbtn"
+          href="http://"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Order Now</a
+        >
+      </div>
+    </header>
+    <section class="Deal">
+      <div class="video">
+        <img src="Los Pollos images-gif/Food Icon.svg" alt="MealBox" />
+        <video autoplay loop muted plays-inline class="back-vid">
+          <source src="Los Pollos images-gif/Food video-vmake.mp4" type="video/mp4" />
+        </video>
+      </div>
+    </section>
+    <section class="exploreMenu">
+      <div class="MenuCard-Container">
         <div class="MenuCard">
-            <img src="Los Pollos images-gif/Chicken Sandwhich.jpg" alt="" srcset="">
-            <div class="MenuCardInfo"></div>
-            <h3>Explore The Whole Menu</h3>
-            <p>Come and enjoy the delicious food</p>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Let's Eat</a>
+          <img
+            src="Los Pollos images-gif/Chicken Sandwhich.png"
+            alt="sandwhich"
+          />
+          <div class="MenuCardInfo">
+            <h3>Discover Our Delicious Menu</h3>
+            <p>
+              From our Signature Fried Chicken Sandwhich to mouth-watering sides
+              and drinks, there's something for everyone. Click here to explore
+              our full Menu!
+            </p>
+            <a
+              class="btn"
+              href="http://"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Let's Eat</a
+            >
+          </div>
         </div>
-    </div>
-    
-</section>
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+        <div class="MenuCard">
+            <div class="MenuCardInfo">
+              <h3>Life's Better with Rewards</h3>
+              <p>
+                Enjoy exclusive perks with every bite! Join out Los Pollos Rewrds program and start earning points for free food, special discounts, and surprise rewards. Because loyalty deserves something delicious!
+              </p>
+              <a
+                class="btn"
+                href="http://"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Join Now</a
+              >
+            </div>
+            <img
+              id="Image2"
+              src="Los Pollos images-gif/Eating Chicken Sandwhcih.jpg"
+              alt="sandwhich"
+            />
+          </div>
+      </div>
+    </section>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
