--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="losPollosHermanoMain.css" />
+    <link rel="icon" type="Image/x-icon" href = "Los Pollos images-gif/LosPollosHermanosLogo1.png"
   </head>
   <body>
     <header class="header">
@@ -43,7 +44,7 @@
           href="http://"
           target="_blank"
           rel="noopener noreferrer"
-          >Set a Location</a
+          > <ion-icon name="location"></ion-icon>Set a Location</a
         >
         <ion-icon id="UserProf" name="person-circle-outline"></ion-icon>
         <a
@@ -108,6 +109,22 @@
           </div>
       </div>
     </section>
+    <footer>
+<div class="footer-container">
+    <div class="about">
+        <a href="#">About us</a>
+        <a href="#">Services</a>
+        <a href="#">Testimonials</a>
+        <a href="#">Contact us</a>
+
+    </div>
+    <div class="icon-footer">
+       <a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+        <a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
+        <a href="https://www.instagram.com/eatlospolloshermanos/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+    </div>
+</div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
