changed file names and added cater section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="losPollosHermanoMain.css" />
-    <link rel="icon" type="Image/x-icon" href = "Los Pollos images-gif/LosPollosHermanosLogo1.png"
+    <link rel="icon" type="Image/x-icon" href = "LosPollosImages-gif/LosPollosHermanosLogo1.png"
   </head>
   <body>
     <header class="header">
       <div class="logo">
         <img
           id="logo"
-          src="Los Pollos images-gif/LosPollosHermanosLogo2.webp"
+          src="LosPollosImages-gif/LosPollosHermanosLogo2.webp"
           alt="LosPollosHermanosLogo"
         />
       </div>
@@ -47,6 +47,7 @@
           > <ion-icon name="location"></ion-icon>Set a Location</a
         >
         <ion-icon id="UserProf" name="person-circle-outline"></ion-icon>
+        <ion-icon id="Cart"name="cart"></ion-icon>
         <a
           id="Navbtn"
           href="http://"
@@ -58,17 +59,17 @@
     </header>
     <section class="Deal">
       <div class="video">
-        <img src="Los Pollos images-gif/Food Icon.svg" alt="MealBox" />
+        <img src="LosPollosImages-gif/FoodIcon.svg" alt="MealBox" />
         <video autoplay loop muted plays-inline class="back-vid">
-          <source src="Los Pollos images-gif/Food video-vmake.mp4" type="video/mp4" />
+          <source src="LosPollosImages-gif/FoodVideo-cutting.mp4" type="video/mp4" />
         </video>
       </div>
     </section>
     <section class="exploreMenu">
       <div class="MenuCard-Container">
-        <div class="MenuCard">
+        <div class="Card">
           <img
-            src="Los Pollos images-gif/Chicken Sandwhich.png"
+            src="LosPollosImages-gif/ChickenSandwich.png"
             alt="sandwhich"
           />
           <div class="MenuCardInfo">
@@ -87,7 +88,7 @@
             >
           </div>
         </div>
-        <div class="MenuCard">
+        <div class="Card">
             <div class="MenuCardInfo">
               <h3>Life's Better with Rewards</h3>
               <p>
@@ -103,11 +104,28 @@
             </div>
             <img
               id="Image2"
-              src="Los Pollos images-gif/Eating Chicken Sandwhcih.jpg"
-              alt="sandwhich"
+              src="LosPollosImages-gif/EatingChickenSandwich.jpg"
+              alt="sandwich"
             />
           </div>
       </div>
+    </section>
+    <section class="Cater">
+        <div class="cater-container">
+            <div class="Card Catercard">
+            <h3>Make Your Next Event Unforgettable!</h3>
+            <p>
+                Whether it's a birthday, office party, or family gathering, let Los Pollos Hermanos bring the flavor! Our Catering Packages are perfect for any occastion, with our signature chicken and fresh sides gauranteed to make your guests smile
+            </p>
+            <a
+                class="btn"
+                href="http://"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Explore Catering Options</a
+              >
+            </div>
+        </div>
     </section>
     <footer>
 <div class="footer-container">
