Finished second set of cards and fixed images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="losPollosHermanoMain.css" />
-    <link rel="icon" type="Image/x-icon" href = "LosPollosImages-gif/LosPollosHermanosLogo1.png"
+    <link rel="icon" type="Image/x-icon" href =
+    "LosPollosImages-gif/LosPollosHermanosLogo1.png"
   </head>
   <body>
     <header class="header">
@@ -36,7 +37,12 @@
         <a id="Rewards" href="http://" target="_blank" rel="noopener noreferrer"
           >Rewards</a
         >
-        <input type="search" name="Searchbar" id="Searchbar" placeholder="Search">
+        <input
+          type="search"
+          name="Searchbar"
+          id="Searchbar"
+          placeholder="Search"
+        />
       </div>
       <div class="userNav">
         <a
@@ -44,15 +50,12 @@
           href="http://"
           target="_blank"
           rel="noopener noreferrer"
-          > <ion-icon name="location"></ion-icon>Set a Location</a
+        >
+          <ion-icon name="location"></ion-icon>Set a Location</a
         >
         <ion-icon id="UserProf" name="person-circle-outline"></ion-icon>
-        <ion-icon id="Cart"name="cart"></ion-icon>
-        <a
-          id="Navbtn"
-          href="http://"
-          target="_blank"
-          rel="noopener noreferrer"
+        <ion-icon id="Cart" name="cart"></ion-icon>
+        <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
           >Order Now</a
         >
       </div>
@@ -61,17 +64,17 @@
       <div class="video">
         <img src="LosPollosImages-gif/FoodIcon.svg" alt="MealBox" />
         <video autoplay loop muted plays-inline class="back-vid">
-          <source src="LosPollosImages-gif/FoodVideo-cutting.mp4" type="video/mp4" />
+          <source
+            src="LosPollosImages-gif/FoodVideo-cutting.mp4"
+            type="video/mp4"
+          />
         </video>
       </div>
     </section>
     <section class="exploreMenu">
       <div class="MenuCard-Container">
         <div class="Card">
-          <img
-            src="LosPollosImages-gif/ChickenSandwich.png"
-            alt="sandwhich"
-          />
+          <img src="LosPollosImages-gif/ChickenSandwich.png" alt="sandwhich" />
           <div class="MenuCardInfo">
             <h3>Discover Our Delicious Menu</h3>
             <p>
@@ -89,59 +92,124 @@
           </div>
         </div>
         <div class="Card">
-            <div class="MenuCardInfo">
-              <h3>Life's Better with Rewards</h3>
-              <p>
-                Enjoy exclusive perks with every bite! Join out Los Pollos Rewrds program and start earning points for free food, special discounts, and surprise rewards. Because loyalty deserves something delicious!
-              </p>
-              <a
-                class="btn"
-                href="http://"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Join Now</a
-              >
-            </div>
-            <img
-              id="Image2"
-              src="LosPollosImages-gif/EatingChickenSandwich.jpg"
-              alt="sandwich"
-            />
+          <div class="MenuCardInfo">
+            <h3>Life's Better with Rewards</h3>
+            <p>
+              Enjoy exclusive perks with every bite! Join out Los Pollos Rewrds
+              program and start earning points for free food, special discounts,
+              and surprise rewards. Because loyalty deserves something
+              delicious!
+            </p>
+            <a
+              class="btn"
+              href="http://"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Join Now</a
+            >
           </div>
+          <img
+            id="Image2"
+            src="LosPollosImages-gif/EatingChickenSandwich.jpg"
+            alt="sandwich"
+          />
+        </div>
       </div>
     </section>
     <section class="Cater">
-        <div class="cater-container">
-            <div class="Card Catercard">
-            <h3>Make Your Next Event Unforgettable!</h3>
-            <p>
-                Whether it's a birthday, office party, or family gathering, let Los Pollos Hermanos bring the flavor! Our Catering Packages are perfect for any occastion, with our signature chicken and fresh sides gauranteed to make your guests smile
-            </p>
-            <a
-                class="btn"
-                href="http://"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Explore Catering Options</a
-              >
-            </div>
+      <div class="cater-container">
+        <div class="Card Catercard">
+          <h3>Make Your Next Event Unforgettable!</h3>
+          <p>
+            Whether it's a birthday, office party, or family gathering, let Los
+            Pollos Hermanos bring the flavor! Our Catering Packages are perfect
+            for any occastion, with our signature chicken and fresh sides
+            gauranteed to make your guests smile
+          </p>
+          <a
+            class="btn"
+            href="http://"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Explore Catering Options</a
+          >
         </div>
+      </div>
+    </section>
+    <section class="explore2">
+      <div class="card-containers">
+        <div class="Card Square">
+          <div class="image">
+            <img
+              src="LosPollosImages-gif/Its-giving-thanksgiving.png"
+              alt="Table of Food"
+            />
+          </div>
+          <div class="square-info">
+            <h3>Thanksgiving Made Easy</h3>
+            <p>
+              Enjoy more time with family and let us handle the feast! Order
+              your Los Pollos Thanksgiving favorites, from crispy chicken to
+              savory sides, perfect for any holiday table
+            </p>
+            <a class="btn" href="http://">Order Catering</a>
+          </div>
+        </div>
+        <div class="Card Square">
+          <div class="image">
+            <img
+              src="LosPollosImages-gif/Slaw Goodman.png"
+              alt="Table of Food"
+            />
+          </div>
+          <div class="square-info">
+            <h3>Try Our "Slaw Goodman"!</h3>
+            <p>
+             Bring some flair to your meal with the slaw that's got character! Our "Slaw Goodman" is packed with flavor, crunch, and a touch of attitude-- perfect for any dish
+            </p>
+            <a class="btn" href="http://">Order now</a>
+          </div>
+        </div>
+        <div class="Card Square">
+            <div class="image">
+              <img
+              id="takeOut"
+                src="LosPollosImages-gif/Take Out.png"
+                alt="Table of Food"
+              />
+            </div>
+            <div class="square-info">
+              <h3>Craving Los Pollos at Home?</h3>
+              <p>
+               Enjoy your favorites anytime, anywhere! Order Los Pollos Hermanos for delivery or takeout and bring the flavor straight to your door.
+              </p>
+              <div class="btn-container">
+                <a class="btn" href="http://">Order Pickup</a>
+                <a class="btn" href="http://">Order Takeout</a>
+              </div>
+              
+            </div>
+          </div>
+      </div>
     </section>
     <footer>
-<div class="footer-container">
-    <div class="about">
-        <a href="#">About us</a>
-        <a href="#">Services</a>
-        <a href="#">Testimonials</a>
-        <a href="#">Contact us</a>
-
-    </div>
-    <div class="icon-footer">
-       <a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
-        <a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
-        <a href="https://www.instagram.com/eatlospolloshermanos/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-    </div>
-</div>
+      <div class="footer-container">
+        <div class="about">
+          <a href="#">About us</a>
+          <a href="#">Services</a>
+          <a href="#">Testimonials</a>
+          <a href="#">Contact us</a>
+        </div>
+        <div class="icon-footer">
+          <a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+          <a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
+          <a
+            href="https://www.instagram.com/eatlospolloshermanos/"
+            target="_blank"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
+        </div>
+      </div>
     </footer>
     <script
       type="module"
