Added secret Gus

--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
             ><ion-icon name="logo-instagram"></ion-icon
           ></a>
         </div>
+        <section class="secret">
+            <img  id ="SecretGus"src="LosPollosImages-gif/Gus Frank Icon.svg" alt="GusSecret">
+        </section>
       </div>
     </footer>
     <script
