Made functional Location pop up-and organized files

--- a/Pickup-Takeout.html
+++ b/Pickup-Takeout.html
@@ -43,14 +43,7 @@
         />
       </div>
       <div class="userNav">
-        <a
-          id="Set-a-location"
-          href="http://"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <ion-icon name="location"></ion-icon>Set a Location</a
-        >
+        <button id ="Modalbutton"><ion-icon name="location"></ion-icon>Set a Location</button>
         <a href="Sign-in.html"
           ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
         ></a>
@@ -60,9 +53,9 @@
         >
       </div>
     </header>
-    <section class="popup">
+    <section id ="Mymodal" class="modal">
       <div class="popup-container">
-        <div id="Pickup" class="popup-card">
+        <div id="Delivery-modal" class="popup-card">
           <h5>Order details</h5>
           <div class="P-D-btns-container">
             <button class = "P-D-btns"id="Delivery">Delivery</button>
@@ -95,7 +88,7 @@
           </div>
           <button class ="Update-btn">Update</button>
         </div>
-        <div id="Pickup"class="popup-card">
+        <!-- <div id="Pickup-modal"class="popup-card">
             <h5>Order details</h5>
             <div class="P-D-btns-container">
               <button class ="P-D-btns"id="Delivery">Delivery</button>
@@ -123,7 +116,8 @@
               </div>
             </div>
             <button class ="Update-btn">Update</button>
-          </div>
+          </div> -->
+          
       </div>
     </section>
     <footer>
