--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         />
       </div>
       <div class="nav">
-        <a id="Menu" href="http://" target="_blank" rel="noopener noreferrer"
+        <a id="Menu" href="MenuPage.html" target="_blank" rel="noopener noreferrer"
           >Menu</a
         >
         <a
@@ -89,7 +89,7 @@
             </p>
             <a
               class="btn"
-              href="http://"
+              href="MenuPage.html"
               target="_blank"
               rel="noopener noreferrer"
               >Let's Eat</a
@@ -107,7 +107,7 @@
             </p>
             <a
               class="btn"
-              href="http://"
+              href="Sign-in.html"
               target="_blank"
               rel="noopener noreferrer"
               >Join Now</a
