ability to switch from delivery to pickup

--- a/MenuPage.html
+++ b/MenuPage.html
@@ -16,7 +16,7 @@
         <img id = "logo" src="LosPollosHermanosLogo2.webp" alt="LosPollosHermanosLogo">
     </div>
     <div class="nav">
-        <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
+        <a id ="Menu">Menu</a>
         <a id ="Who we are"href="http://" target="_blank" rel="noopener noreferrer">Who we are</a>
         <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
         <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
@@ -43,7 +43,7 @@
             <li>Burgers</li>
             <li>Kiddies</li>
             <li>Beverages</li>
-            <li><button class="location-button"><ion-icon name="pin"></ion-icon> Delivery</button></li>
+            <li><button id="D-P-Indicator" class="location-button"><ion-icon name="pin"></ion-icon> Delivery</button></li>
         </ul>
         
     </nav>
