Fmade modal id into classes

--- a/MenuPage.html
+++ b/MenuPage.html
@@ -503,7 +503,7 @@
         
         <div class="P-D-btns-container">
           <button class = "P-D-btns Delivery-Menu"id="Deliverybtn">Delivery</button>
-          <button class = "P-D-btns Delivery-Menu"id="Pickupbtn">Pickup</button>
+          <button class = "P-D-btns Pickup-Menu"id="Pickupbtn">Pickup</button>
         </div>
         <p>Place you Scheduled order right now</p>
         <div class="form-container">
