--- a/Sign-in.html
+++ b/Sign-in.html
@@ -31,6 +31,7 @@
         <source src="LosPollosImages-gif/Gus (1).mp4" type="video/mp4" />
       </video>
     </div>
+    <script src ="manager.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
