Modal Was not working cause I never connected it with the script... 2

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     />
   </head>
   <body>
+  <!-- ----------------------------------------------------------------------- -->
+<!--                            Sticky Navigation                            -->
+<!-- ----------------------------------------------------------------------- -->
     <header id="Page1" class="header">
       <div class="logo">
         <img
@@ -58,12 +61,15 @@
         <a href="Sign-in.html"
           ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
         ></a>
-        <a href=""><ion-icon id="Cart" name="cart"></ion-icon></a>
+        <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
         <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
           >Order Now</a
         >
       </div>
     </header>
+<!-- ----------------------------------------------------------------------- -->
+<!--                            First Video Block                            -->
+<!-- ----------------------------------------------------------------------- -->
     <section class="Deal">
       <div class="video">
         <img src="LosPollosImages-gif/FoodIcon.svg" alt="MealBox" />
@@ -120,6 +126,9 @@
         </div>
       </div>
     </section>
+<!-- ----------------------------------------------------------------------- -->
+<!--                            Cater Section                            -->
+<!-- ----------------------------------------------------------------------- -->
     <section class="Cater">
       <div class="cater-container">
         <div class="Card Catercard">
@@ -140,6 +149,9 @@
         </div>
       </div>
     </section>
+<!-- ----------------------------------------------------------------------- -->
+<!--                            Second Set of card Section                           -->
+<!-- ----------------------------------------------------------------------- -->
     <section class="explore2">
       <div class="card-containers">
         <div class="Card Square">
@@ -200,6 +212,9 @@
         </div>
       </div>
     </section>
+<!-- ----------------------------------------------------------------------- -->
+<!--                            Footer Section                           -->
+<!-- ----------------------------------------------------------------------- -->
     <footer>
       <div class="footer-container">
         <div class="about">
@@ -270,6 +285,7 @@
         </div>
       </div>
     </section>
+    <script type="module" src="script.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
