--- a/MenuPage.html
+++ b/MenuPage.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link
+      rel="icon"
+      type="Image/x-icon"
+      href="LosPollosImages-gif/LosPollosHermanosLogo1.png"
+    />
 </head>
 <body>
 <!-- ----------------------------------------------------------------------- -->
@@ -28,8 +33,8 @@
         <a href="Sign-in.html"
           ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
         ></a>
-        <a href=""><ion-icon id="Cart" name="cart"></ion-icon></a>
-        <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
+        <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
+        <a id="Navbtn" href="MenuPage.html"noopener noreferrer"
           >Order Now</a
         >
     </div>
