--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         >
         <a
           id="Who we are"
-          href="http://"
+          href= "Who.html"
           target="_blank"
           rel="noopener noreferrer"
           >Who we are</a
