--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -403,7 +403,7 @@
                 <h4 class="item-header">Fountain Drink</h4>
                 <p class="item-description">Your choice of Sprite, Dr. Pepper, Coca Cola, or Diet Coke, served ice cold</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Order Now</button></span></div>
+            <div class="price"><span>$</span>1.30<span> <button class="btn menu-add">Order Now</button></span></div>
             <div class="item-img">
                 <img src = "media/coke.webp" alt = "chicken-tenders">
                </div>
