--- a/receipt.html
+++ b/receipt.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Order Receipt - Los Pollos Hermanos</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="receipt.css">
 </head>
 <body>
@@ -16,7 +24,7 @@
         <div class="nav">
             <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
             <a id ="Who we are"href="http://" target="_blank" rel="noopener noreferrer">Who we are</a>
-            <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
+            <a id ="Rewards"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
             <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
         </div>
         <div class="userNav">
@@ -35,7 +43,9 @@
             <p>Thanks for choosing Los Pollos Hermanos</p>
         </header>
 
-        <!-- Progress Bar Section -->
+        <!-- ----------------------------------------------------------------------- -->
+        <!--                          Progress Bar Section                           -->
+        <!-- ----------------------------------------------------------------------- -->
         <section class="order-status">
             <h2>Order Status</h2>
             <div class="progress-bar">
@@ -64,7 +74,7 @@
         </section>
 
         <section class="items">
-            <h2>Coming Right Up!</h2>
+            <h2>What's Cookin'?</h2>
             <ul class="item-list">
                 <li>
                     <div class="item-details">
@@ -88,7 +98,7 @@
             <h2>Your Total</h2>
             <div class="total-row">
                 <p>Subtotal:</p>
-                <p>$10.47</p>
+                <p>$8.79</p>
             </div>
             <div class="total-row">
                 <p>Delivery Fee:</p>
@@ -96,16 +106,17 @@
             </div>
             <div class="total-row">
                 <p><strong>Total:</strong></p>
-                <p><strong>$12.97</strong></p>
+                <p><strong>$11.29</strong></p>
             </div>
         </section>
 
         <footer>
             <div class="cta">
-                <a href="#" class="cta-button">Order Again</a>
+                <a href="#menu.html" class="cta-button">Order Again</a>
             </div>
         </footer>
     </div>
-
+<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+<script src = "progress.js"></script>
 </body>
 </html>
