--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -21,7 +21,7 @@
     <!-- ----------------------------------------------------------------------- -->
     <!--                            Sticky Navigation                            -->
     <!-- ----------------------------------------------------------------------- -->
-    <header id="CheckoutPage" class="header">
+    <header  class="header">
       <div class="logo">
         <img
           id="logo"
@@ -61,7 +61,7 @@
     <!-- ----------------------------------------------------------------------- -->
     <!--                            Final Cart Section                           -->
     <!-- ----------------------------------------------------------------------- -->
-    <section class="FinalCart">
+    <section id="CheckoutPage" class="FinalCart">
       <div class="page-container">
         <div class="Payment-Info-Container">
           <div class="Payment-Info-Content">
@@ -114,7 +114,7 @@
               <h4 id="P">Price</h4>
             </div>
             <div class="Item-Qty-Price-List">
-              <div class="Item-Container">
+              <!-- <div class="Item-Container">
                 <img id="Item-img" src="" alt="ItemImg" />
                 <p>Itemname</p>
               </div>
@@ -128,7 +128,7 @@
               </div>
               <div class="Price-Container">
                 <p>Price</p>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -173,5 +173,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
