Items are now adding to final checkout page

--- a/MenuPage.html
+++ b/MenuPage.html
@@ -73,7 +73,7 @@
                     <h4 class="item-header">Huevos Rancheros</h4>
                     <p class="item-description">Fried eggs (3) served on a lightly fried corn tortillas in cooked salsa. A Mexican breakfast classic.</p>
                 </div>
-                <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+                <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
                 <div class="item-img">
                     <img src = "LosPollosImages-gif/huevorancheros.png" alt = "huevos rancheros">
                    </div>
@@ -84,7 +84,7 @@
                     <h4 class="item-header">Carne Avocado Rancheros</h4>
                     <p class="item-description">Grilled steak, creamy avocado, and zesty ranchero sauce, served with warm corn tortillas.</p>
                 </div>
-                <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+                <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
                 <div class="item-img">
                     <img src = "LosPollosImages-gif/avocadorancheros.webp" alt = "carne avocado rancheros">
                 </div>
@@ -109,7 +109,7 @@
                         <h4 class="item-header">Classic Burrito</h4>
                         <p class="item-description">Egg & potato</p>
                     </div>
-                    <div class="price"><span>$</span>2.49<span> <button class="btn menu-add">Add to Cart</button></span></div>
+                    <div class="price">$<span>2.49</span> <button class="btn menu-add">Add to Cart</button></div>
                     <div class="item-img">
                         <img src = "LosPollosImages-gif/potato.jpg" alt = "classic burrito">
                        </div>
@@ -120,7 +120,7 @@
                         <h4 class="item-header">New Mexico </h4>
                         <p class="item-description">Ground beef, refried beans, & melted cheese </p>
                     </div>
-                    <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+                    <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
                     <div class="item-img">
                         <img src = "LosPollosImages-gif/combo.jpg" alt = "New Mexico burrito">
                     </div>
@@ -132,7 +132,7 @@
                         <h4 class="item-header">Albuquerque burrito</h4>
                         <p class="item-description">Sausage, egg, potato, red chile & cheese</p>
                     </div>
-                    <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+                    <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
                     <div class="item-img">
                         <img src = "LosPollosImages-gif/albuquerque.png" alt = "Albuquerque burrito">
                     </div>
@@ -143,7 +143,7 @@
                         <h4 class="item-header">South Valley Burrito</h4>
                         <p class="item-description">Chicken, egg, potato, red chile & cheese</p>
                     </div>
-                    <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+                    <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
                     <div class="item-img">
                         <img src = "LosPollosImages-gif/elasado.jpg" alt = "South valley burrito">
                     </div>
@@ -163,7 +163,7 @@
                 <h4 class="item-header">Pollo Platter A</h4>
                 <p class="item-description">Three piece chicken with two sides</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/classicplatter.webp" alt = "Pollo platter A">
                </div>
@@ -174,7 +174,7 @@
                 <h4 class="item-header">Pollo Platter B</h4>
                 <p class="item-description">Two piece chicken with one side</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/polloplatter2.webp" alt = "chicken-tenders">
             </div>
@@ -186,7 +186,7 @@
                 <h4 class="item-header">10 pc Pollo Box</h4>
                 <p class="item-description">Ten pieces of our signature pollo chicken (5 legs, 5 thighs) with your choice of side</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/chickenbox.png" alt = "pollo box 10pc">
             </div>
@@ -197,7 +197,7 @@
                 <h4 class="item-header">6 pc Pollo Bucket</h4>
                 <p class="item-description">Six pieces of our signature pollo chicken</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span><button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/chickenbox.png" alt = "pollo box 6pc">
             </div>
@@ -222,7 +222,7 @@
 
                 </p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/chicken-tenders.webp" alt = "chicken tenders">
                </div>
@@ -233,7 +233,7 @@
                 <h4 class="item-header">Pollo Curly fries</h4>
                 <p class="item-description">Our signature crispy, golden fries served hot and salted to perfection.</p>
             </div>
-            <div class="price"><span>$</span>2.50<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>2.50</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/pollofries.png" alt = "french fries">
             </div>
@@ -247,7 +247,7 @@
 
                 </p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/nuggets.png" alt = "Chicken nuggets">
             </div>
@@ -259,7 +259,7 @@
                 <p class="item-description">Crispy tortilla chips topped with melted cheese, juicy tomato, refried beans and your choice of meat.
                 </p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/nachos.jpg" alt = "nachos">
             </div>
@@ -282,7 +282,7 @@
 
                 </p>
             </div>
-            <div class="price"><span>$</span>3.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>3.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/ChickenSandwich.png" alt = "chicken sandwich">
                </div>
@@ -297,7 +297,7 @@
 
                 </p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/grilledsandwich.png" alt = "Grilled chicken sandwich">
             </div>
@@ -313,7 +313,7 @@
 
                 </p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/avocadosandwich.png" alt = "el aguacate sandwich">
             </div>
@@ -328,7 +328,7 @@
 
                     s</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/spicychicken.png" alt = "Spicy chicken sandwich">
             </div>
@@ -347,7 +347,7 @@
                 <h4 class="item-header">Apple Pie</h4>
                 <p class="item-description">Warm, buttery crust filled with sweet cinnamon-spiced apples</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/applepie.png" alt = "Apple pie">
                </div>
@@ -359,7 +359,7 @@
                 <p class="item-description">Creamy, thick, and indulgent—choose from classic vanilla, chocolate, or strawberry.
                 </p>
             </div>
-            <div class="price"><span>$</span>3.19<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>3.19</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/milkshake.png" alt = "strawberry milkshake">
             </div>
@@ -375,7 +375,7 @@
 
                 </p>
             </div>
-            <div class="price"><span>$</span>4.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>4.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/frenchstix.png" alt = "french toast sticks">
             </div>
@@ -387,7 +387,7 @@
                 <p class="item-description">Crispy, cinnamon-sugar-coated treats, served warm with a side of chocolate dipping sauce (4pc).
                 </p>
             </div>
-            <div class="price"><span>$</span>4.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>4.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/churros.png" alt = "churros">
             </div>
@@ -408,7 +408,7 @@
                 <h4 class="item-header">Fountain Drink</h4>
                 <p class="item-description">Your choice of Sprite, Dr. Pepper, Coca Cola, or Diet Coke, served ice cold</p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$</span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/coke.webp" alt = "Coke">
                </div>
@@ -419,7 +419,7 @@
                 <h4 class="item-header">Coffee</h4>
                 <p class="item-description">Freshly brewed, rich and aromatic—served hot or iced for your perfect pick-me-up.                </p>
             </div>
-            <div class="price"><span>$</span>5.99<span> <button class="btn menu-add">Add to Cart</button></span></div>
+            <div class="price">$<span>5.99</span> <button class="btn menu-add">Add to Cart</button></div>
             <div class="item-img">
                 <img src = "LosPollosImages-gif/polloscoffee.png" alt = "Coffee">
             </div>
