--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -77,10 +77,10 @@
             <div class="Summmary-Container">
               <div class="Order-Summary-Container">
                 <h5>Order Summary</h5>
-                <p>Total</p>
-                <p>Subtotal</p>
-                <p>Tax</p>
-                <h5>Order Total</h5>
+                <p id ="TotalPrice">Total</p>
+                <p id = "Subtotal">Subtotal</p>
+                <p id ="tax">Tax</p>
+                <h5 id ="FinalTotal">Order Total</h5>
               </div>
             </div>
             <div class="PaymentMethod-Container">
