--- a/rewards.html
+++ b/rewards.html
@@ -32,7 +32,7 @@
           rel="noopener noreferrer"
           >Home</a
         >
-          <a id="Menu" href="http://" target="_blank" rel="noopener noreferrer"
+          <a id="Menu" href="menu.html" target="_blank" rel="noopener noreferrer"
             >Menu</a
           >
           <a
