--- a/index.html
+++ b/index.html
@@ -212,6 +212,56 @@
         </div>
       </div>
     </section>
+    <section id="TestimonialSection">
+      
+      <h3>Listen to What Our Family is Saying</h3>
+      <div class="Testitmonial-Carousel">
+        <div class="Testimonial-Container">
+          <div class="Testimonial-Card">
+            <p>"The chicken is absolutely amazing—juicy, crispy, and always fresh. The staff is friendly, and I feel like family every time I walk in. Highly recommend"</p>
+            <div class="Testimonial-Customer">
+              <img src="LosPollosImages-gif/Customer -2.webp" alt="Linda">
+              <p>Linda Torres</p>
+            </div>
+          </div>
+          <div class="Testimonial-Card">
+            <p>""Best chicken in the Southwest! Great atmosphere, but I could swear there's more going on behind the counter... Just kidding! Or am I?"
+              "</p>
+            <div class="Testimonial-Customer">
+              <img src="LosPollosImages-gif/SaulGoodmanTest.jpg" alt="Saul">
+              <p>SaulGoodman</p>
+            </div>
+          </div>
+          <div class="Testimonial-Card">
+            <p>"Their sides are underrated! The mashed potatoes and mac & cheese are as good as the chicken. Perfect for lunch or takeout. Five stars!"</p>
+            <div class="Testimonial-Customer">
+              <img src="LosPollosImages-gif/Customer3.jpg" alt="Carlos">
+              <p>Carlos Ramirez</p>
+            </div>
+          </div>
+          <div class="Testimonial-Card">
+            <p>"The food is... adequate. Let's just say I've had my fair share of reasons to visit. Always a dependable choice for a quick meal."</p>
+            <div class="Testimonial-Customer">
+              <img src="LosPollosImages-gif/WalterWhiteTest.jpg" alt="Walter">
+              <p>Walter White</p>
+            </div>
+          </div>
+          <div class="Testimonial-Card">
+            <p>"Such a clean and inviting restaurant! They always make you feel welcome, and the flavors are incredible. My go-to place for comfort food.""</p>
+            <div class="Testimonial-Customer">
+              <img src="LosPollosImages-gif/Customer-1.webp" alt="Sara">
+              <p>Sara L</p>
+            </div>
+          </div>
+        </div>
+        <div class="buttons">
+          <button class="slide" id="Prev-TestBtn"><ion-icon name="caret-back-outline"></ion-icon></button>
+          <button class="slide" id ="Next-TestBtn"><ion-icon name="caret-forward-outline"></ion-icon></button>
+        </div>
+       
+      </div>
+
+    </section>
 <!-- ----------------------------------------------------------------------- -->
 <!--                            Footer Section                           -->
 <!-- ----------------------------------------------------------------------- -->
